k8s/docker-flow-hub/templates/deployment.yaml
---
# Source: docker-flow-hub/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub-docker-flow-hub
  labels:
    app: docker-flow-hub
    chart: docker-flow-hub-0.0.1
    release: hub
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: docker-flow-hub
      release: hub
  template:
    metadata:
      labels:
        app: docker-flow-hub
        release: hub
    spec:
      containers:
      - name: ui
        image: vfarcic/docker-flow-hub-docs:latest
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            cpu: 15m
            memory: 15Mi
          requests:
            cpu: 5m
            memory: 5Mi
