k8s/docker-flow-hub/templates/svc.yaml
---
# Source: docker-flow-hub/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub-docker-flow-hub
  labels:
    app: docker-flow-hub
    chart: docker-flow-hub-0.0.1
    release: hub
    heritage: Tiller
spec:
  ports:
  - port: 80
  type: NodePort
  selector:
    app: docker-flow-hub
    release: hub
